* Alterado para teste com gps do carro

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         });
 
         var getPassword = function(){
-            return prompt('Confirme ação com sua senha', 'Insira sua senha');
+            return prompt('Confirme ação com sua senha');
         }
         $(function(){
             $('#send-block').click(function(){
